# AWS-IT-RESOURCE-WEB

./: .gitignore  README.md  deploy.sh  pyproject.toml  samconfig.toml  template.yaml
frontend/: .env.example  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx
frontend/src/api/: index.ts
frontend/src/components/: Pagination.tsx  ProtectedRoute.tsx  Sidebar.css  Sidebar.tsx  Toast.css  Toast.tsx  WhatsNew.css  WhatsNew.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/data/: changelog.ts
frontend/src/pages/: ActivityList.tsx  AdminRoleGrantForm.tsx  AdminTagManagement.tsx  AdminTicketApproval.tsx  Dashboard.css  Dashboard.tsx  LoginPage.css  LoginPage.tsx  MyRequests.tsx  Pages.css  RoleRequestForm.tsx  TicketDetail.tsx  TicketList.tsx  WorkRequestList.tsx
frontend/src/utils/: userMapping.ts
src/: __init__.py  requirements.txt
src/handlers/: __init__.py  approval_handler.py  cloudtrail_processor.py  dashboard_api.py  request_handler.py  role_manager_handler.py
src/models/: __init__.py  role_request.py
src/services/: __init__.py  dynamodb_repository.py  mattermost_client.py  notification_service.py  request_validator.py  role_manager.py  scheduler.py  tag_config_service.py
tests/: test_mattermost_client.py  test_request_handler.py  test_request_validator.py  test_role_manager.py
